<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv"
    style="@style/CardView"
    card_view:cardElevation="2dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="5dp"
                    android:visibility="gone"
                    android:textSize="10sp"
                    />

                <TextView
                    android:id="@+id/id"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="5dp"
                    />

                <TextView
                    android:id="@+id/name"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:drawableRight="@mipmap/ic_person_outline_white_36dp_grey"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_sample"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/phone"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_sample"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_gravity="center_vertical"
                    />

                <TextView
                    android:id="@+id/email"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_sample"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:layout_gravity="center_vertical"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:divider="?android:attr/dividerHorizontal"
                    android:showDividers="end"
                    style="?android:buttonBarStyle">

                    <Button
                        android:id="@+id/call_button"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:drawableRight="@mipmap/ic_call_white_24dp"
                        android:drawableEnd="@mipmap/ic_call_white_24dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:text="@string/call" />

                    <Button
                        android:id="@+id/details_button"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/details" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>